Fixed issue where images where showing when cropping new image

--- a/src/componensts/users/profile/image/index.module.css
+++ b/src/componensts/users/profile/image/index.module.css
@@ -4,8 +4,11 @@
   flex-wrap: wrap;
   padding: 0;
   padding-bottom: 50px;
+  position: relative;
 }
+.edit-image-conatiner {
 
+}
 .image-item {
   flex: 33%;
   max-width: 28%;
